Banners have now been updated and reflect their respective pages.

--- a/src/CineplexMovieComplex/Views/Home/Index.cshtml
+++ b/src/CineplexMovieComplex/Views/Home/Index.cshtml
@@ -11,40 +11,40 @@
     </ol>
     <div class="carousel-inner" role="listbox">
         <div class="item active">
-            <img src="~/images/twoBrothers.png" alt="ASP.NET" class="img-responsive" />
+            <img src="~/images/twoBrothers2.png" alt="ASP.NET" class="img-responsive" />
             <div class="carousel-caption" role="option" style="margin-bottom:-20px;">
                 <p>
-                    <a class="btn btn-success" href="~/Movies/">
+                    <a class="btn btn-success" href="https://www.youtube.com/watch?v=9ziXpIPAhD4">
                         Find out more
                     </a>
                 </p>
             </div>
         </div>
         <div class="item">
-            <img src="~/images/banner2.svg" alt="Visual Studio" class="img-responsive" />
+            <img src="~/images/session_times.png" alt="Visual Studio" class="img-responsive" />
             <div class="carousel-caption" role="option" style="margin-bottom:-20px;">
                 <p>
-                    <a class="btn btn-success" href="http://go.microsoft.com/fwlink/?LinkID=525030&clcid=0x409">
+                    <a class="btn btn-success" href="~/Movies/">
                         Learn More
                     </a>
                 </p>
             </div>
         </div>
         <div class="item">
-            <img src="~/images/banner3.svg" alt="Package Management" class="img-responsive" />
+            <img src="~/images/cbd_location3.png" alt="Package Management" class="img-responsive" />
             <div class="carousel-caption" role="option" style="margin-bottom:-20px;">
                 <p>
-                    <a class="btn btn-success" href="http://go.microsoft.com/fwlink/?LinkID=525029&clcid=0x409">
+                    <a class="btn btn-success" href="~/CineplexeMovies">
                         Learn More
                     </a>
                 </p>
             </div>
         </div>
         <div class="item">
-            <img src="~/images/banner4.svg" alt="Microsoft Azure" class="img-responsive" />
+            <img src="~/images/catering.png" alt="Microsoft Azure" class="img-responsive" />
             <div class="carousel-caption" role="option" style="margin-bottom:-20px;">
                 <p>
-                    <a class="btn btn-success" href="http://go.microsoft.com/fwlink/?LinkID=525027&clcid=0x409">
+                    <a class="btn btn-success" href="~/Events">
                         Learn More
                     </a>
                 </p>
