--- a/src/CineplexMovieComplex/Views/Shared/_Layout.cshtml
+++ b/src/CineplexMovieComplex/Views/Shared/_Layout.cshtml
@@ -4,7 +4,6 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - CineplexMovieComplex</title>
-
     <environment names="Development">
         <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
         <link rel="stylesheet" href="~/css/site.css" />
@@ -61,6 +60,7 @@
                         }
                     }
                 </ul>
+                <img src="https://i.imgur.com/CjbaV6e.png" alt="Tri" style="position: relative;left: -64%;z-index: -1;opacity:0.5;">
                 @await Html.PartialAsync("_LoginPartial")
             </div>
         </div>
@@ -69,6 +69,7 @@
         @RenderBody()
         <hr />
         <footer>
+            <hr />
             <p>&copy; 2017 - CineplexMovieComplex</p>
         </footer>
     </div>
@@ -91,5 +92,6 @@
     </environment>
 
     @RenderSection("scripts", required: false)
+    
 </body>
 </html>
