Credit card processing working. Max 5 items in cart. Re-Direct to cart full page. Fixed bug showing all movie tickets instead of only those in cart. Re-aligned design of cart page.

--- a/src/CineplexMovieComplex/Views/MovieTickets/Checkout.cshtml
+++ b/src/CineplexMovieComplex/Views/MovieTickets/Checkout.cshtml
@@ -1,6 +1,9 @@
 ﻿@model CineplexMovieComplex.Models.PurchaseDetails
-
-<h2>Please review your purchase details</h2>
+@{
+    ViewData["Title"] = "Review Cart";
+}
+<h2>Review Cart</h2>
+<h4>Please review your purchase details</h4>
 <table class="table">
     <thead>
         <tr>
@@ -19,6 +22,8 @@
         </tr>
     </thead>
     <tbody>
+        @if (Model.NumConcession > 0)
+        {
         <tr>
             <td>
                 Concession
@@ -33,6 +38,9 @@
                 $@Html.DisplayFor(m => m.ConcessionTotalCost)
             </td>
         </tr>
+        }
+        @if (Model.NumAdult > 0)
+        {
         <tr>
             <td>
                 Adult
@@ -47,6 +55,7 @@
                 $@Html.DisplayFor(m => m.AdultTotalCost)
             </td>
         </tr>
+        }
         <tr>
             <td></td>
             <td></td>
