Corrected banner links.

--- a/src/CineplexMovieComplex/Views/Home/Index.cshtml
+++ b/src/CineplexMovieComplex/Views/Home/Index.cshtml
@@ -28,7 +28,7 @@
                 <img src="~/images/session_times.png" alt="Visual Studio" class="img-responsive" />
                 <div class="carousel-caption" role="option" style="margin-bottom:-20px;">
                     <p>
-                        <a class="btn btn-success" href="~/Movies/">
+                        <a class="btn btn-success" href="~/CineplexMovies/">
                             Learn More
                         </a>
                     </p>
@@ -38,7 +38,7 @@
                 <img src="~/images/cbd_location3.png" alt="Package Management" class="img-responsive" />
                 <div class="carousel-caption" role="option" style="margin-bottom:-20px;">
                     <p>
-                        <a class="btn btn-success" href="~/CineplexeMovies">
+                        <a class="btn btn-success" href="~/Cineplexes">
                             Learn More
                         </a>
                     </p>
