--- a/src/CineplexMovieComplex/Views/CineplexMovies/SelectSeat.cshtml
+++ b/src/CineplexMovieComplex/Views/CineplexMovies/SelectSeat.cshtml
@@ -55,12 +55,13 @@
         </div>
     </div>
 }
-    <div class="form-group" style="margin-top:20%;">
-        <div class="col-md-offset-2 col-md-10">
-            <a asp-action="Index">Back to List</a>
-        </div>
+</div>
+<div class="form-group" style="margin-top:20%;">
+    <div>
+        <a asp-action="Index">Back to List</a>
     </div>
 </div>
+
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
